Split server, one for Elasticsearch and one for Junior application

--- a/ansible/junior.yml
+++ b/ansible/junior.yml
@@ -1,7 +1,6 @@
 ---
-- hosts: local
+- hosts: junior
   roles:
-    - nginx
     - aeriscloud.nodejs
     - AsianChris.npm
     - martinmicunda.bower
