Fix elasticsearch config file copying

--- a/ansible/roles/abtpeople.elasticsearch/templates/elasticsearch.yml
+++ b/ansible/roles/abtpeople.elasticsearch/templates/elasticsearch.yml
@@ -31,7 +31,7 @@
 #
 #cluster.name: elasticsearch
 {% if es_etc_cluster_name is defined %}cluster.name: {{ es_etc_cluster_name }}{% endif %}
-
+cluster.name: "JuniorElasticCluster"
 
 #################################### Node #####################################
 
@@ -40,6 +40,7 @@
 #
 #node.name: "Franz Kafka"
 {% if es_etc_node_name is defined %}node.name: {{ es_etc_node_name }}{% endif %}
+node.name: "JuniorNode"
 
 # Every node can be configured to allow or deny being eligible as the master,
 # and to allow or deny to store the data.
