--- a/ansible/roles/abtpeople.elasticsearch/tasks/main.yml
+++ b/ansible/roles/abtpeople.elasticsearch/tasks/main.yml
@@ -9,8 +9,8 @@
   template: src=elasticsearch dest=/etc/default/elasticsearch
   notify: Restart elasticsearch
 
-- name: Copy /etc/elasticsearch/elasticsearch.yml
-  template: src=elasticsearch.yml dest=/etc/elasticsearch/elasticsearch.yml
+- name: Copy /usr/share/elasticsearch/config
+  template: src=elasticsearch.yml dest=/usr/share/elasticsearch/config
   notify: Restart elasticsearch
 
 - name: Set elasticsearch service to start on boot
