--- a/ansible/roles/abtpeople.elasticsearch/tasks/main.yml
+++ b/ansible/roles/abtpeople.elasticsearch/tasks/main.yml
@@ -9,8 +9,11 @@
   template: src=elasticsearch dest=/etc/default/elasticsearch
   notify: Restart elasticsearch
 
-- name: Copy /usr/share/elasticsearch/config
-  template: src=elasticsearch.yml dest=/usr/share/elasticsearch/config
+- name: Assure /usr/share/elasticsearch/config dir exists
+  file: path=/usr/share/elasticsearch/config state=directory
+
+- name: Copy /usr/share/elasticsearch/config/elasticsearch.yml
+  template: src=elasticsearch.yml dest=/usr/share/elasticsearch/config/elasticsearch.yml
   notify: Restart elasticsearch
 
 - name: Set elasticsearch service to start on boot
