--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,13 +1,15 @@
 ---
-- hosts: all
+- hosts: elastic1
+  remote_user: vagrant
+  sudo: true
+  sudo_user: root
   tasks:
+    - name: log in as vagrant
+      shell: whoami
     - name: ensure ntpd is at the latest version
       apt: pkg=ntp state=latest
       notify:
       - restart ntpd
-    - name: Add installation user
-      remote_user: root
-      user: name=alfbhust comment="Alf Bjorn Hustoft" groups=adm,vagrant,users
   handlers:
     - name: restart ntpd
       service: name=ntpd state=restarted
