--- a/ansible/elastic.yml
+++ b/ansible/elastic.yml
@@ -1,8 +1,10 @@
 ---
-- hosts: elastic2
+- hosts: all
   remote_user: vagrant
   sudo: true
   sudo_user: root
+  tasks:
+    - apt: update_cache=yes
   roles:
     - openjdk-java
     - elasticsearch
