--- a/ansible/elastic.yml
+++ b/ansible/elastic.yml
@@ -1,10 +1,10 @@
 ---
-- hosts: all
+- hosts: dbs
   remote_user: vagrant
   sudo: true
   sudo_user: root
-  tasks:
-    - apt: update_cache=yes
+  #tasks:
+    #- apt: update_cache=yes
   roles:
     - openjdk-java
     - elasticsearch
